# ai_trader

./: .gitignore  ARCHITECTURE.md  CHART_DISPLAY_GUIDE.md  CLEANUP_SUMMARY.md  QUICK_START.md  README.md  TECHNICAL_ANALYSIS_GUIDE.md  TECHNICAL_ANALYSIS_GUI_GUIDE.md  dca_gui.py  dca_profit.py  migrate_to_new_structure.py  project_structure.md  pyproject.toml  requirements.txt  run_gui.py  setup.py  start_cli.py  start_gui.py
config/: __init__.py  settings.py  settings.yaml
src/ai_trader/: __init__.py  cli.py
src/ai_trader/core/: __init__.py
src/ai_trader/core/analysis/: __init__.py  backtest.py  charting.py  indicators.py  patterns.py  signals.py
src/ai_trader/core/base/: __init__.py  broker.py  data_source.py  strategy.py
src/ai_trader/core/data/providers/: __init__.py  base.py  binance.py
src/ai_trader/gui/: __init__.py  main_window.py
src/ai_trader/gui/pages/: __init__.py  dca_page.py  technical_analysis_page.py
src/ai_trader/strategies/: __init__.py
src/ai_trader/strategies/dca/: __init__.py  dca_strategy.py
tests/: __init__.py
tests/unit/: test_dca_strategy.py
